--- a/playbook/tasks/install.yaml
+++ b/playbook/tasks/install.yaml
@@ -11,7 +11,8 @@
 		  "gcc", "g++", "python3", "python3-pip", "make", "cmake",
 		  "docker-ce", "docker-ce-cli", "containerd.io", "docker-compose-plugin",
 		  "vim", "nano", "less",
-  		"snapd"
+  		"snapd",
+      "zsh", "zsh-theme-powerlevel9k", "chrome-gnome-shell"
     ]
   apt:
     name: "{{item}}"
@@ -19,9 +20,14 @@
     install_recommends: no
 
 - name: install base tools GUI
-  tags: never, gui
-  loop: ["gnome-core", "network-manager", "terminator", "vlc", "gnome-tweaks", "google-chrome-stable", "code"]
+  loop: ["gnome-core", "network-manager", "terminator", "vlc", "gnome-tweaks", "code"]
   apt:
     name: "{{item}}"
     state: latest
     install_recommends: no
+
+- name: Install from snap
+  loop: ["kubectl", "kubectx", "teams", "discord"]
+  community.general.snap:
+    name: "{{item}}"
+    classic: true
