--- a/playbook/tasks/env.yaml
+++ b/playbook/tasks/env.yaml
@@ -14,4 +14,6 @@
     ansible.builtin.git:
       repo: https://github.com/trojaj12/DotFiles.git
       dest: ~/.dotfiles
+      track_submodules: true
+      recursive: true
     when: not dotfiles.stat.exists
